AWS SDK for Java 1.12.715